[gd_scene load_steps=16 format=3 uid="uid://b18jjbobcv68o"]

[ext_resource type="Script" uid="uid://cn6ulq2sbejg7" path="res://main/game.gd" id="1_ryrav"]
[ext_resource type="PackedScene" path="res://entities/player/player.tscn" id="2_player"]
[ext_resource type="Script" uid="uid://dge7pqo288vcw" path="res://entities/environment/ceiling.gd" id="3_7jktm"]
[ext_resource type="AudioStream" uid="uid://bg33ntrxiup4l" path="res://assets/audio/explosion.mp3" id="4_hve3p"]
[ext_resource type="Script" uid="uid://bf2wrtan650he" path="res://entities/environment/floor.gd" id="5_ryrav"]
[ext_resource type="PackedScene" uid="uid://bm6otxrfdubws" path="res://entities/obstacles/obstacle.tscn" id="6_spawner"]
[ext_resource type="Script" uid="uid://dnt5rmjfeyeaf" path="res://systems/obstacle_spawner.gd" id="7_spawner"]
[ext_resource type="Script" uid="uid://bn341nfm3crix" path="res://systems/game_manager.gd" id="8_manager"]
[ext_resource type="PackedScene" uid="uid://cpxw8y6u5n8r1" path="res://entities/obstacles/multiplier.tscn" id="9_mult"]
[ext_resource type="AudioStream" uid="uid://beaalq00t7nwf" path="res://assets/audio/power-up.mp3" id="10_mult_sound"]
[ext_resource type="PackedScene" uid="uid://dqw8x7y605t4u" path="res://ui/start_screen.tscn" id="11_start"]
[ext_resource type="PackedScene" uid="uid://dav8w7x6y504t" path="res://ui/game_over_screen.tscn" id="12_gameover"]
[ext_resource type="AudioStream" uid="uid://c613350k81se1" path="res://assets/audio/jet-engine.mp3" id="13_jet"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jktm"]
size = Vector2(1200, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryrav"]
size = Vector2(1200, 40)

[node name="Game" type="Node2D"]
script = ExtResource("1_ryrav")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9, 0.9, 0.9, 1)

[node name="GameManager" type="Node" parent="."]
script = ExtResource("8_manager")
game_over_sound = ExtResource("4_hve3p")
multiplier_sound = ExtResource("10_mult_sound")
jet_engine_sound = ExtResource("13_jet")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(600, 300)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(600, 300)

[node name="Ceiling" type="StaticBody2D" parent="."]
script = ExtResource("3_7jktm")

[node name="ColorRect" type="ColorRect" parent="Ceiling"]
offset_right = 1200.0
offset_bottom = 40.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Border" type="Line2D" parent="Ceiling"]
points = PackedVector2Array(0, 40, 1200, 40)
width = 2.0
default_color = Color(0.05, 0.05, 0.05, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
position = Vector2(600, 20)
shape = SubResource("RectangleShape2D_7jktm")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(0, 560)
script = ExtResource("5_ryrav")

[node name="ColorRect" type="ColorRect" parent="Floor"]
offset_right = 1200.0
offset_bottom = 40.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Border" type="Line2D" parent="Floor"]
points = PackedVector2Array(0, 0, 1200, 0)
width = 2.0
default_color = Color(0.05, 0.05, 0.05, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(600, 20)
shape = SubResource("RectangleShape2D_ryrav")

[node name="ObstacleSpawner" type="Node2D" parent="."]
script = ExtResource("7_spawner")
obstacle_scene = ExtResource("6_spawner")
multiplier_scene = ExtResource("9_mult")
spawn_interval = 1.0
spawn_x_position = 1200.0

[node name="StartScreen" parent="." instance=ExtResource("11_start")]

[node name="GameOverScreen" parent="." instance=ExtResource("12_gameover")]

[node name="HUD" type="CanvasLayer" parent="."]
layer = 100

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_top = 2.0
offset_right = -10.0
offset_bottom = 36.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Score: 0"
horizontal_alignment = 2
